5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1633_2939.log
== TEST (2019-04-02 19:02:26) 
-- CODE:
(round 83%/12,0)
-- ERROR:
File "XXXX", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:02:28) 
-- CODE:
(round 83%/12,0)
-- EXECUTION TIME:
0.173002
-- ERROR:
  File "/home/codebench/codes/1633/2939/main.py", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:24) 
-- CODE:
(round 83%/12,0)
-- ERROR:
File "XXXX", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:09:24) 
-- CODE:
(round 83%/12,0)
-- EXECUTION TIME:
0.141563
-- ERROR:
  File "/home/codebench/codes/1633/2939/main.py", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:25) 
-- CODE:
(round 83%/12,0)
-- ERROR:
File "XXXX", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:09:28) 
-- CODE:
(round 83%/12,0)
-- EXECUTION TIME:
0.207536
-- ERROR:
  File "/home/codebench/codes/1633/2939/main.py", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:30) 
-- CODE:
(round 83%/12,0)
-- ERROR:
File "XXXX", line 1
    (round 83%/12,0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
